[tool.poetry]
name = "autonomous-llm-assistant"
version = "0.1.0"
description = ""
authors = ["Bat-Erdene Sukh-Ochir <s.bat-erdene@mn.data-artist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
langchain = "^0.0.340"
jupyter = "^1.0.0"
jupyter-black = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
